Fixes #4: Corrected alignment for buttons -added centered buttons -added new font so that the page transactions is cohesive with the table

--- a/frontend/src/Components/Windows/Transactions.css
+++ b/frontend/src/Components/Windows/Transactions.css
@@ -1,11 +1,11 @@
 /* Transactions.css*/
+  @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
+
   .transaction {
     margin: 0;
     width: 100%;
     height: 100%;
-    font-family: Arial, sans-serif;
     color: #333;     
-    
     background-color: #E8F0F2; /* Fondo suave y profesional */
     padding: 20px;
     width:100vw;
@@ -17,13 +17,14 @@
 
   .table-header-buttons {
     display: flex;
-    justify-content: flex-start; 
-    gap: 10px; 
+    justify-content: center; 
+    gap: 30px; 
     margin-bottom: 20px; 
   }
   
   .table-header-buttons button {
-    background-color: #2b6cb0; 
+    font-family: 'Poppins', sans-serif;
+    background-color: #000; 
     color: white;
     padding: 10px 15px; 
     font-size: 1rem;
@@ -49,6 +50,7 @@
   }
 
   .transaction button{
+    font-family: 'Poppins', sans-serif;
     background-color: #2b6cb0; 
     color: #ffffff;
     font-size: 1em;
@@ -73,6 +75,7 @@
   }
 
   .transaction-type-buttons button {
+    font-family: 'Poppins', sans-serif;
     margin: 5px;
     padding: 10px 20px;
     border: none;
@@ -110,6 +113,7 @@
   .transaction-form input[type="number"],
   .transaction-form input[type="date"],
   .transaction-form select {
+    font-family: 'Poppins', sans-serif;
     width: 100%;
     padding: 10px;
     font-size: 1em;
@@ -131,6 +135,7 @@
 
   .category-dropdown,
   .account-dropdown {
+    font-family: 'Poppins', sans-serif;
     background-color: #1A202C;
     font-size: 1em;
     border: 1px solid #1A202C;
@@ -167,18 +172,6 @@
     text-align: center;
   }
 
-  .table-container {
-    width: 100%;
-    margin-top: 100px;
-  }
-  
-  .table-header {
-    display: flex;
-    justify-content: flex-start; /* Align button to the left */
-    align-items: center;
-    margin-bottom: 10px; /* Add space between button and table */
-  }
-  
   .add-transaction {
     background-color: #2b6cb0;
     color: white; 
@@ -213,7 +206,7 @@
 
 /* Modal content */
 .modal-content {
-  background-color: #fff;
+  background-color: #1A202C;
   border-radius: 8px;
   padding: 20px;
   box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
